--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,33 +1,5 @@
 @import 'config';
-
-@mixin easeOut {
-  transition: all 0.5s ease-out;
-  -webkit-transition: all 0.5s ease-out;
-  -moz-transition: all 0.5s ease-out;
-  -ms-transition: all 0.5s ease-out;
-  -o-transition: all 0.5s ease-out;
-}
-
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-
-    &:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba($primary-color, $background-opacity);
-      z-index: -1;
-    }
-  }
-}
+@import 'menu';
 
 * {
   box-sizing: border-box;
