--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -33,6 +33,14 @@ $background-opacity: 0.7;
   }
 }
 
+// Set text color
+@function set-text-color($color) {
+  @if (lightness($color) > 40) {
+    @return #000;
+  } @else {
+    @return #fff;
+  }
+}
 // Media query mixins
 @mixin mediaSm {
   @media screen and (max-width: 500px) {
