--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -59,6 +59,16 @@
       background-size: cover;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
+    grid-template-columns: 1fr;
+  }
 }
 
 // Smartphones
