new project appended in work page and contact page style for mobile screens

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #333;
-$secondary-color: #192a88;
+$secondary-color: #5164d3;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.7;
