--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -83,11 +83,22 @@
 
 // Smartphones
 @include mediaSm {
+  main {
+    padding: 2rem;
+  }
   main#home h1 {
     margin-top: 10vh;
   }
 
   .projects {
     grid-template-columns: 1fr;
+  }
+
+  .boxes div {
+    padding: 0.5rem;
+    font-size: 1.5rem;
+    :hover {
+      padding: 0.6rem;
+    }
   }
 }
