--- a/scss/main.scss
+++ b/scss/main.scss
@@ -131,6 +131,7 @@ main {
   &:hover {
     background: $secondary-color;
     color: set-text-color($secondary-color);
+    @include easeOut;
   }
 }
 
