--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #333;
-$secondary-color: #5164d3;
+$primary-color: #141a46;
+$secondary-color: #ec9a85;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.7;
